# tele-tycoon

./: .env.example  .gitignore  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml
docs/: database-fix-summary.md  error-recovery-implementation.md  game-recovery.md
scripts/: setup_bot.sh  stop_bot.sh
teletycoon/: __init__.py  main.py
teletycoon/ai/: __init__.py  base_ai.py  llm_player.py  rule_based_ai.py
teletycoon/bot/: __init__.py  handlers.py  telegram_bot.py
teletycoon/database/: __init__.py  base.py  models.py  repository.py
teletycoon/engine/: __init__.py  game_engine.py  operating_round.py  revenue_calculator.py  stock_round.py  train_manager.py
teletycoon/models/: __init__.py  company.py  game_state.py  player.py  stock.py  tile.py  train.py
teletycoon/renderer/: __init__.py  board_renderer.py  state_renderer.py  stock_renderer.py
teletycoon/turn_manager/: __init__.py  action_validator.py  turn_manager.py
tests/: __init__.py  test_full_game.py
